--- a/first_projecct/templates/blog/base.html
+++ b/first_projecct/templates/blog/base.html
@@ -5,7 +5,20 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+        <link rel="stylesheet" href="static/registration/adminLTE/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
+        <!-- iCheck -->
+        <link rel="stylesheet" href="{% static 'registration/adminLTE/plugins/icheck-bootstrap/icheck-bootstrap.min.css'%}">
+        <!-- JQVMap -->
+        <link rel="stylesheet" href="{% static 'registration/adminLTE/plugins/jqvmap/jqvmap.min.css'%}">
+        <!-- Theme style -->
+        <link rel="stylesheet" href="{% static 'registration/adminLTE/dist/css/adminlte.min.css' %}">
+        <!-- overlayScrollbars -->
+        <link rel="stylesheet" href="{% static 'registration/adminLTE/plugins/overlayScrollbars/css/OverlayScrollbars.min.css'%}">
+        <!-- Daterange picker -->
+        <link rel="stylesheet" href="{% static 'registration/adminLTE/plugins/daterangepicker/daterangepicker.css' %}">
+        <!-- summernote -->
+        <link rel="stylesheet" href="{% static 'registration/adminLTE/plugins/summernote/summernote-bs4.min.css'%}">
         <script src="https://kit.fontawesome.com/f24531a6b0.js" crossorigin="anonymous"></script>
         {% comment %} use fontawasome......... {% endcomment %}
         
@@ -16,7 +29,7 @@
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         {%block style%} {%endblock%}
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="{%static 'blog/css/base.css'%}" rel="stylesheet" />
+        <link href="{%static 'blog/css/base.css'%}" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <!-- Responsive navbar-->
@@ -60,5 +73,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+
     </body>
 </html>
