send real email using stp backend

--- a/first_projecct/templates/registration/make_profile.html
+++ b/first_projecct/templates/registration/make_profile.html
@@ -46,6 +46,8 @@
       </div>
       <!-- /.card-body -->
 
+      <label class="ml-4"><a href="{%url 'change_password'%}">change password</a></label>
+
       <div class="card-footer">
         <button type="submit" class="btn btn-primary">save</button>
 
