--- a/first_projecct/templates/registration/base.html
+++ b/first_projecct/templates/registration/base.html
@@ -50,7 +50,7 @@
       </li>
 
       <li class="nav-item">
-        <a class="nav-link " href="{% url "account:logout" %}" role="button"><i class="fa fa-sign-out" aria-hidden="true"> logout</i></a>
+        <a class="nav-link " href="{% url "logout" %}" role="button"><i class="fa fa-sign-out" aria-hidden="true"> logout</i></a>
       </li>
 
       <li class="nav-item d-none d-sm-inline-block">
