--- a/first_projecct/templates/registration/login.html
+++ b/first_projecct/templates/registration/login.html
@@ -16,6 +16,11 @@
 	<h1>Login</h1>
 	<p class="text-muted"> Please enter your login and password!</p>  
 	{{form.username}}
-	{{form.password}} <a class="forgot text-muted" href="#">Forgot password?</a> <input type="submit"  name="" value="Login" href="#"> <div class="col-md-12"> 
+	{{form.password}}
+	
+	<label class="">
+		<a class="forgot text-muted" href="{%url 'password_reset' %}">Forgot password?</a> <input type="submit"  name="" value="Login" >  
+	</label>
+	<div class="col-md-12">
 	</form> 
 </div>
