--- a/first_projecct/static/registration/login.css
+++ b/first_projecct/static/registration/login.css
@@ -29,7 +29,8 @@ body {
 }
 
 .box input[type="text"],
-.box input[type="password"] {
+.box input[type="password"],
+.box input[type="email"] {
     border: 0;
     background: none;
     display: block;
@@ -51,7 +52,8 @@ body {
 }
 
 .box input[type="text"]:focus,
-.box input[type="password"]:focus {
+.box input[type="password"]:focus,
+.box input[type="email"]:focus{
     width: 300px;
     border-color: #2ecc71
 }
